# epf

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/raw/: ch_load_2023.csv  ch_load_2024.csv  ch_prices_2023.csv  ch_prices_2024.csv  de_gas_gen_2023.csv  de_gas_gen_2024.csv  de_global_horizontal_irradiation_2024.csv  de_hardcoal_gen_2023.csv  de_hardcoal_gen_2024.csv  de_lignite_gen_2023.csv  de_lignite_gen_2024.csv  de_load_2023.csv  de_load_2024.csv  de_prices_2019.csv  de_prices_2020.csv  de_prices_2021.csv  de_prices_2022.csv  de_prices_2023.csv  de_prices_2024.csv  de_prices_and_load_avg_week_2024.csv  de_solar_gen_2023.csv  de_solar_gen_2024.csv  de_vre_gen_2024.csv  de_wind_gen_offshore_2023.csv  de_wind_gen_offshore_2024.csv  de_wind_gen_onshore_2023.csv  de_wind_gen_onshore_2024.csv  de_wind_speed_100_2024.csv  dk_1_prices_2023.csv  dk_1_prices_2024.csv  dk_2_prices_2023.csv  dk_2_prices_2024.csv  dk_load_2023.csv  dk_load_2024.csv  fr_load_2023.csv  fr_load_2024.csv  fr_prices_2023.csv  fr_prices_2024.csv
docs/: mkdocs.yml
docs/docs/: index.md
epf/: __init__.py  __main__.py  cli.py  config.py  dataset.py  dm.py  features.py  pipeline.py  plots.py  util.py
epf/modeling/: __init__.py  cnn.py  gru.py  lstm.py  model.py  predict.py  train.py  util.py
models/: conv_vre_only.keras  gru_vre_only.keras  lstm_vre_only.keras  timings.json
notebooks/: automated_data_loading.ipynb  delete_when_finished.ipynb  epf_main.ipynb  exploratory_analysis.ipynb  other_data_viz.ipynb  testing.ipynb  tmp.ipynb
references/: refs.md
(+11 files in other folders)
