[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "epf"
version = "0.0.1"
description = "Forecasting electricity prices in theGerman day-ahead market withmachine learning algorithms"
authors = [
  { name = "Valentin Rosar" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["epf"]
include = ["pyproject.toml", "epf/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["epf"]
force-sort-within-sections = true

